# gnn-from-scratch

./: .gitignore  GAT.py  GCN.py  README.md  config.yaml  configEdgePred.yaml  configGAT.yaml  configGCN.yaml  draft.ipynb  draft.py  edge_prediction.py  gat_inductive.py  gat_transductive.py  model.py  models.py  pyproject.toml  requirements.txt  train.py  train_gat.py  train_gcn.py  utils.py
